# DLproyect

./: README.md  model.pth  model_insurance.pth  pyproject.toml  pytorch.py
EDA/: EDA.py
data/: X_test_scaled.csv  X_train_scaled.csv  X_val_scaled.csv  insurance_preprocessed.csv  y_test.csv  y_train.csv  y_val.csv
models/: model_insurance.pth
src/: EDA.py  main.py  preprocesing.py  pytorch.py
